# NorthstarStubs

./: README.md  meson.build
.github/workflows/: build.yml  release.yml
src/d3d11/: com_object.h  d3d11_blend.cc  d3d11_buffer.cc  d3d11_class_linkage.cc  d3d11_cmdlist.cc  d3d11_context.cc  d3d11_context_imm.cc  d3d11_depth_stencil.cc  d3d11_device.cc  d3d11_device_child.h  d3d11_include.h  d3d11_input_layout.cc  d3d11_main.cc  d3d11_query.cc  d3d11_rasterizer.cc  d3d11_resource.cc  d3d11_sampler.cc  d3d11_shader.h  d3d11_state.h  d3d11_state_object.cc  d3d11_swapchain.cc  d3d11_texture.cc  d3d11_view_dsv.cc  d3d11_view_rtv.cc  d3d11_view_srv.cc  d3d11_view_uav.cc  dxgi_adapter.cc  dxgi_factory.cc  dxgi_output.cc  log.h  meson.build  version.rc
src/gfsdk/: meson.build  ssao.rc  txaa.rc
