shared_library('GFSDK_SSAO.win64', 'ssao.cc', windows.compile_resources('ssao.rc'),
  name_prefix    : '',
  install        : true,
  vs_module_defs : 'ssao.def',
)

shared_library('GFSDK_TXAA.win64', 'txaa.cc', windows.compile_resources('txaa.rc'),
  name_prefix    : '',
  install        : true,
  vs_module_defs : 'txaa.def',
)
